# manifest-generator

./: README.md  manifest-generator.cabal
.stack-work/install/x86_64-osx/lts-9.9/8.0.2/flag-cache/: SHA-1.6.4.2-6ZuKopcglGG4yoCGsd9koJ  aeson-1.1.2.0-7ssY6fy1GxZGXxTPcOtf2k  attoparsec-0.13.1.0-3ql4hcH9pGfBAlE21oqFTQ  base-compat-0.9.3-KeJp8zYMpcS9WibvTcxU22  dlist-0.8.0.3-BHFBNaw8k6n9WiaUNzoXpk  hashable-1.2.6.1-2ZLNuHq395GGIHwEHuqZol  integer-logarithms-1.0.2-92lMiWV9mmYAwfMEYgfQ0D  manifest-generator-0.1.0.0  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  random-1.1-9tceXaeYIMZ4JrKq20Egog  scientific-0.3.5.2-FM2NdrNTcdbCDq9wuNnhIA  tagged-0.8.5-1mTloBSoUxv8dqUr8XBGBt  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00  time-locale-compat-0.1.1.3-KZ1jqNx8uhlHjmuPPj6V1Y  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  unordered-containers-0.2.8.0-Bp9XgxjuHxcI4tFehVMDGC  uuid-types-1.0.3-HQOuja9trySCcuflACyDTJ  vector-0.12.0.1-692PQMDMB6pIQ1uGwefDcQ
src/: Main.hs  SignatureGenerator.hs
