name:                manifest-generator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dmvisner/manifest-generator#readme
license:             BSD3
license-file:        LICENSE
author:              Derek M. Visner
maintainer:          dmvisner@outlook.com
copyright:           2017 Derek M. Visner
category:            Console App
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable manifest-generator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       mtl,
                       directory,
                       aeson,
                       text,
                       bytestring,
                       SHA,
                       transformers
  other-modules:     SignatureGenerator       

